# bulbs-tui

./: Cargo.toml  README.md
src/: api.rs  app.rs  cli.rs  config.rs  main.rs  rgb.rs  ui.rs
