[package]
name = "bulbs-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
enum_glob_use = "warn"
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.196", features = ["derive"] }
ureq = { version = "2.9.6", default-features = false, features = ["json"] }
