[package]
name = "bulbs-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
enum_glob_use = "warn"
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.12"
ureq = { version = "2.9.6", features = ["json"] }
xdg = "2.5.2"
