[package]
name = "bulbs-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[lints.clippy]
enum_glob_use = "warn"
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
ureq = "2.9.6"
xdg = "2.5.2"
